--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
 </style>
   </head>
   <body>
-    <h1 class="text-green-500">
-      Hello world!
-    </h1>
+    <!-- banner section -->
+     <section class="grid grid-cols-2 container mx-auto ">
+      <div class="banner-left space-y-[30px]">
+        <h2 class="text-[80px] font-bold">It's good  <br>
+tea time at The <br>Tea House</h2>
+<p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+<button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold" >Explore More <i class="fa-solid fa-arrow-right-long inline-block -rotate-45"></i></button>
+      </div>
+      <div class="banner-right">
+        <img src="./images/banner.png" alt="">
+      </div>
+     </section>
   </body>
 </html>
 
