--- a/index.html
+++ b/index.html
@@ -23,17 +23,54 @@
   </head>
   <body>
     <!-- banner section -->
-     <section class="grid grid-cols-2 container mx-auto ">
-      <div class="banner-left space-y-[30px]">
-        <h2 class="text-[80px] font-bold">It's good  <br>
+     <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto ">
+      <div class="banner-left space-y-[30px] px-[2rem] mt-16">
+        <h2 class="md:text-[70px] text-[50px]  font-bold">It's good  <br>
 tea time at The <br>Tea House</h2>
 <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
 <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold" >Explore More <i class="fa-solid fa-arrow-right-long inline-block -rotate-45"></i></button>
       </div>
-      <div class="banner-right">
+      <div class="banner-right relative  flex justify-end items-end">
         <img src="./images/banner.png" alt="">
+        <div class=" bg-white rounded-xl shadow-2xl flex justify-center gap-2 items-center w-[250px] absolute bottom-[15px] left-[150px] py-[25px] px-[15px]">
+          <img src="./images/rating.png" alt="">
+          <div>
+          <h2 class="font-bold text-2xl  ">5.00</h2>
+          <p>Trust Pilot Ratings</p>
+          </div>
+        </div>
       </div>
      </section>
+     <!-- feature section -->
+      <section class="feature-section container mx-auto mt-7">
+        <div class="text-center max-w-[70%]  mx-auto">
+          <h2 class="font-bold text-[45px]">Our Featured Products</h2>
+          <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          </div>
+        <div class="card-container grid grid-cols-4 gap-4">
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+                <img src="./images/tea-1.png" alt="" class="mx-auto">
+                <h2 class="font-semibold text-xl pt-6">Milk Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+              </div>
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+                <img src="./images/tea-2.png" alt="">
+                <h2 class="font-semibold text-xl pt-6">Black Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+              </div>
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+                <img src="./images/tea-3.png" alt="">
+                <h2 class="font-semibold text-xl pt-6">Lemon Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+              </div>
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+                <img src="./images/tea-4.png" alt="">
+                <h2 class="font-semibold text-xl pt-6">Green Tea</h2>
+                <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+              </div>
+          </div>
+        
+      </section>
   </body>
 </html>
 
