--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@ tea time at The <br>Tea House</h2>
      <!-- feature section -->
       <section class="feature-section container mx-auto mt-7">
         <div class="text-center max-w-[70%]  mx-auto">
-          <h2 class="font-bold text-[45px]">Our Featured Products</h2>
-          <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <h2 class="font-bold md:text-[45px] text-4xl">Our Featured Products</h2>
+          <p class="text-[#777777] text-xs md:text-[16px] pt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
           </div>
-        <div class="card-container grid grid-cols-4 gap-4">
-              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+        <div class="card-container grid md:grid-cols-4 grid-cols-1 gap-4">
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center max-w-[70%] mx-auto md:max-w-[100%]">
                 <img src="./images/tea-1.png" alt="" class="mx-auto">
                 <h2 class="font-semibold text-xl pt-6">Milk Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
               </div>
-              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center max-w-[70%] mx-auto md:max-w-[100%]">
                 <img src="./images/tea-2.png" alt="">
                 <h2 class="font-semibold text-xl pt-6">Black Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
               </div>
-              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center max-w-[70%] mx-auto md:max-w-[100%]">
                 <img src="./images/tea-3.png" alt="">
                 <h2 class="font-semibold text-xl pt-6">Lemon Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
               </div>
-              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center ">
+              <div class="featured-card bg-linear-to-b from-white to-[#f4f4f4] p-7 text-center flex flex-col justify-center items-center max-w-[70%] mx-auto md:max-w-[100%]">
                 <img src="./images/tea-4.png" alt="">
                 <h2 class="font-semibold text-xl pt-6">Green Tea</h2>
                 <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
