--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@ tea time at The <br>Tea House</h2>
         <p class="text-[#777777] ">Premium Quality that makes tea more elegant and more <br> durable when you use it.</p>
           </div>
        </section>
+       <!--meet our clients -->
+        <section class=" container clients mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mt-20 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
+          <div class="client-left space-y-5 border-red-300 border-2 text-white">
+            <h2 class="font-bold md:text-[55px] text-3xl">Meet Our Super Clients</h2>
+            <p class="font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="bg-white py-2 px-5 rounded-md font-semibold "><span class="bg-linear-to-r from-[orange] to-[red] bg-clip-text text-transparent">Show All</span></button>
+          </div>
+          <div class="client-right border-green-400"></div>
+        </section>
   </body>
 </html>
 
