client section completed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ tea time at The <br>Tea House</h2>
           </div> 
       </section>
       <!-- great tea section -->
-       <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 mt-20">
+       <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 mt-20 ">
        <div class="great-tea-left grid grid-cols-2 grid-rows-3 gap-4 ">
          <div class=" bg-linear-to-r from-[#FFD3AC] to-[#FFFDD0] rounded-md "></div>
           <div class=" row-span-2 rounded-md bg-[#FFFDD0]">
@@ -97,13 +97,40 @@ tea time at The <br>Tea House</h2>
           </div>
        </section>
        <!--meet our clients -->
-        <section class=" container clients mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mt-20 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]">
-          <div class="client-left space-y-5 border-red-300 border-2 text-white">
+        <section class=" container clients mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mt-20 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px] rounded-xl">
+          <div class="client-left p-5 space-y-5 flex flex-col justify-center gap-2 text-white">
             <h2 class="font-bold md:text-[55px] text-3xl">Meet Our Super Clients</h2>
             <p class="font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <button class="bg-white py-2 px-5 rounded-md font-semibold "><span class="bg-linear-to-r from-[orange] to-[red] bg-clip-text text-transparent">Show All</span></button>
+            <button class="bg-white py-2 px-5 rounded-md font-semibold  w-fit"><span class="bg-linear-to-r from-[orange] to-[red] bg-clip-text text-transparent">Show All</span></button>
           </div>
-          <div class="client-right border-green-400"></div>
+          <!-- review card --> 
+          <div class="client-right border-green-400 relative ">
+            <div class="client-right-text space-y-1 absolute p-10 bg-white rounded-lg w-[433px] -left-2.5 top-[150px] z-20">
+               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h2 class="font-bold text-xl">Ilham Yuda</h2>
+               <h3 class="text-[#777777] font-semibold">Businessman</h3>
+                <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
+                <img src="./images/client.png" alt="" class="">
+                </div>
+                <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
+            </div>
+            <div class="client-right-text space-y-2.5 relative p-10 bg-white rounded-lg w-[433px] mb-10 opacity-30 left-[100px]">
+               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h2 class="font-bold text-xl">Ilham Yuda</h2>
+               <h3 class="text-[#777777] font-semibold">Businessman</h3>
+                <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
+                <img src="./images/client.png" alt="" class="">
+                </div>
+            </div>
+            <div class="client-right-text space-y-2.5 relative p-10 bg-white rounded-lg w-[433px] opacity-30 left-[100px]">
+               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+               <h2 class="font-bold text-xl">Ilham Yuda</h2>
+               <h3 class="text-[#777777] font-semibold">Businessman</h3>
+                <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
+                <img src="./images/client.png" alt="" class="">
+                </div>
+            </div>
+          </div>
         </section>
   </body>
 </html>
