--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@ tea time at The <br>Tea House</h2>
           </div>
        </section>
        <!--meet our clients -->
-        <section class=" container clients mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mt-20 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px] rounded-xl">
-          <div class="client-left p-5 space-y-5 flex flex-col justify-center gap-2 text-white">
-            <h2 class="font-bold md:text-[55px] text-3xl">Meet Our Super Clients</h2>
+        <section class=" container clients mx-auto grid grid-cols-1 lg:grid-cols-2 lg:gap-8 gap-20 mt-20 mb-[90px] bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px] rounded-xl">
+          <div class="client-left p-5  flex flex-col justify-center gap-2 text-white">
+            <div class="space-y-5">
+            <h2 class="font-bold md:text-[55px] text-3xl">Meet Our Super <br>Clients</h2>
             <p class="font-medium text-[#f4f4f4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <button class="bg-white py-2 px-5 rounded-md font-semibold  w-fit"><span class="bg-linear-to-r from-[orange] to-[red] bg-clip-text text-transparent">Show All</span></button>
+            <button class="bg-white py-2 px-5 rounded-md font-semibold "><span class="bg-linear-to-r from-[orange] to-[red] bg-clip-text text-transparent">Show All</span></button>
+            </div>
           </div>
           <!-- review card --> 
           <div class="client-right border-green-400 relative ">
@@ -128,6 +130,48 @@ tea time at The <br>Tea House</h2>
                <h3 class="text-[#777777] font-semibold">Businessman</h3>
                 <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
                 <img src="./images/client.png" alt="" class="">
+                </div>
+            </div>
+          </div>
+        </section>
+        <!-- news & events -->
+        <section class="events-section container mx-auto mt-7">
+          <div class="events-heading text-center max-w-[70%]  mx-auto mb-15 ">
+            <h2 class="font-bold md:text-[45px] text-4xl">News & Events</h2>
+            <p class="text-[#777777] text-xs md:text-[16px] pt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          </div>
+          <div class="events-card-container grid md:grid-cols-3 grid-cols-1 sm:grid-cols-2   gap-4">
+            <div class="event-card border border-[#777777]  p-3  flex flex-col justify-center items-stretch mx-auto max-w-[70%] md:max-w-full sm:max-w-full rounded-md">
+              <div >
+                <img src="./images/news-1.png" alt="" class="object-cover w-full">
+              </div>
+              <div class="mt-3.5 mb-4 space-y-5">
+                <p class="text-[#777777] text-[16px] md:text-[20px] ">Feb 05, 2027</p>
+                <h3   class="font-bold text-xl ">Collecting 8 points for <br>discount</h3>
+                <p class="text-[#777777] text-[14px] md:text-[16px] ">There are many variations of passages of Lorem Ipsum available.</p>
+                <p class="font-semibold ">Learn More</p>
+                </div>
+            </div>
+            <div class="event-card border border-[#777777]  p-3  flex flex-col justify-center items-stretch mx-auto max-w-[70%] md:max-w-full sm:max-w-full rounded-md">
+              <div >
+                <img src="./images/news-2.png" alt="" class="object-cover w-full">
+              </div>
+              <div class="mt-3.5 mb-4 space-y-5">
+                <p class="text-[#777777] text-[16px] md:text-[20px] ">Feb 05, 2027</p>
+                <h3   class="font-bold text-xl ">Collecting 8 points for <br>discount</h3>
+                <p class="text-[#777777] text-[14px] md:text-[16px] ">There are many variations of passages of Lorem Ipsum available.</p>
+                <p class="font-semibold ">Learn More</p>
+                </div>
+            </div>
+            <div class="event-card border border-[#777777]  p-3  flex flex-col justify-center items-stretch mx-auto max-w-[70%] md:max-w-full sm:max-w-full rounded-md sm:justify-self-center sm:col-span-2">
+              <div >
+                <img src="./images/news-3.png" alt="" class="object-cover w-full">
+              </div>
+              <div class="mt-3.5 mb-4 space-y-5">
+                <p class="text-[#777777] text-[16px] md:text-[20px] ">Feb 05, 2027</p>
+                <h3   class="font-bold text-xl ">Collecting 8 points for <br>discount</h3>
+                <p class="text-[#777777] text-[14px] md:text-[16px] ">There are many variations of passages of Lorem Ipsum available.</p>
+                <p class="font-semibold ">Learn More</p>
                 </div>
             </div>
           </div>
