--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ tea time at The <br>Tea House</h2>
                 <p class="font-semibold ">Learn More</p>
                 </div>
             </div>
-            <div class="event-card border border-[#777777]  p-3  flex flex-col justify-center items-stretch mx-auto max-w-[70%] md:max-w-full sm:max-w-full rounded-md sm:justify-self-center sm:col-span-2">
+            <div class="event-card border border-[#777777]  p-3  flex flex-col justify-center items-stretch mx-auto max-w-[70%] md:max-w-full sm:max-w-full rounded-md sm:justify-self-center sm:col-span-2 md:col-span-1">
               <div >
                 <img src="./images/news-3.png" alt="" class="object-cover w-full">
               </div>
@@ -176,7 +176,21 @@ tea time at The <br>Tea House</h2>
             </div>
           </div>
         </section>
+        <!-- footer section -->
+      <div class="bg-[#ffddd2]">
+        <footer class="mt-7 container mx-auto">
+          <!-- footer top -->
+           <div class="flex justify-between">
+            <div class="p-7">
+              <img src="./images/cup.png" alt="">
+            </div>
+            <div class="flex gap-4 items-center p-7">
+              <p class="text-[#777777] text-[14px] md:text-[16px] ">Ready to get strated?</p>
+              <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold w-fit" >Get Started</button>
+            </div>
+           </div>
+      </div>
+        </footer>
   </body>
 </html>
 
-i
