--- a/index.html
+++ b/index.html
@@ -177,20 +177,56 @@ tea time at The <br>Tea House</h2>
           </div>
         </section>
         <!-- footer section -->
-      <div class="bg-[#ffddd2]">
-        <footer class="mt-7 container mx-auto">
+      <footer class="bg-[#ffddd2]">
+        <div class="mt-7 container mx-auto p-12">
           <!-- footer top -->
            <div class="flex justify-between">
-            <div class="p-7">
-              <img src="./images/cup.png" alt="">
+              <div class="p-7">
+                <img src="./images/cup.png" alt="">
+              </div>
+              <div class="flex gap-4 items-center p-7">
+                <p class="text-[#777777] text-[14px] md:text-[16px] ">Ready to get strated?</p>
+                <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold w-fit" >Get Started</button>
+              </div>
+           </div>
+          <!-- footer links -->
+           <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2">
+            <div class="">
+              <h3 class="font-semibold text-xl">Quick Links</h3>
+              <ul class="text-[#777777] text-[14px] md:text-[16px] space-y-2 mt-2.5">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Insurance</a></li>
+              </ul>
             </div>
-            <div class="flex gap-4 items-center p-7">
-              <p class="text-[#777777] text-[14px] md:text-[16px] ">Ready to get strated?</p>
-              <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold w-fit" >Get Started</button>
+            <div>
+              <h3 class="font-semibold text-xl">Our Service</h3>
+              <ul class="text-[#777777] text-[14px] md:text-[16px] space-y-2 mt-2.5">
+                <li>Life Insurance</li>
+                <li>Health Insurance</li>
+                <li>Car Insurance</li>
+                <li>House Insurance</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="font-semibold text-xl">Our Service</h3>
+              <ul class="text-[#777777] text-[14px] md:text-[16px] space-y-2 mt-2.5">
+                <li>Life Insurance</li>
+                <li>Health Insurance</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="font-semibold text-xl">Subscribe to our newsletter</h3>
+              <p>Email Address</p>
+              <!-- socials -->
+              <div>
+                <img src="./images/" alt="">
+              </div>
             </div>
            </div>
-      </div>
-        </footer>
+        </div>
+      </footer>
   </body>
 </html>
 
