footer section completed

--- a/index.html
+++ b/index.html
@@ -216,12 +216,15 @@ tea time at The <br>Tea House</h2>
                 <li>Health Insurance</li>
               </ul>
             </div>
-            <div>
-              <h3 class="font-semibold text-xl">Subscribe to our newsletter</h3>
-              <p>Email Address</p>
+            <div class="space-y-5">
+              <h3 class="font-semibold text-xl ">Subscribe to our <br> newsletter</h3>
+              <input type="text" placeholder="Email address" class="border-b-2 pb-2  outline-none text-[#777777]">
+              <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white rounded-full h-8 w-8 font-semibold" ><i class="fa-solid fa-angle-right"></i></button>
               <!-- socials -->
-              <div>
-                <img src="./images/" alt="">
+              <div class="space-x-4">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
               </div>
             </div>
            </div>
