project completed , responsive for large medium and small devices

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- banner section -->
-     <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto hidden">
+     <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto ">
       <div class="banner-left space-y-[30px] px-[2rem] mt-16">
         <h2 class="md:text-[70px] text-[50px]  font-bold">It's good  <br>
 tea time at The <br>Tea House</h2>
@@ -46,7 +46,7 @@ tea time at The <br>Tea House</h2>
      </section>
      <!-- feature section -->
       <section class="feature-section container mx-auto mt-7 ">
-        <div class="text-center max-w-[70%]  mx-auto ">
+        <div class="text-center max-w-[70%]  mx-auto m-12">
           <h2 class="font-bold md:text-[45px] text-4xl">Our Featured Products</h2>
           <p class="text-[#777777] text-xs md:text-[16px] pt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
           </div>
@@ -107,8 +107,8 @@ tea time at The <br>Tea House</h2>
           </div>
           <!-- review card --> 
           <div class="client-right border-green-400 relative ">
-            <div class="client-right-text space-y-1 absolute p-10 bg-white rounded-lg w-[433px] -left-2.5 top-[150px] z-20">
-               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div class="client-right-text sm:space-y-1  absolute md:p-10 pt-8 pl-8 pb-4 bg-white rounded-lg w-[300px] sm:w-[433px] -left-2.5 top-[120px] z-20">
+               <p class="text-[#777777] relative z-2 text-sm mb-7">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                <h2 class="font-bold text-xl">Ilham Yuda</h2>
                <h3 class="text-[#777777] font-semibold">Businessman</h3>
                 <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
@@ -116,16 +116,16 @@ tea time at The <br>Tea House</h2>
                 </div>
                 <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
             </div>
-            <div class="client-right-text space-y-2.5 relative p-10 bg-white rounded-lg w-[433px] mb-10 opacity-30 left-[100px]">
-               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div class="client-right-text space-y-1 relative md:p-10 pt-8 pl-8 pb-4 bg-white rounded-lg w-[300px] sm:w-[433px] mb-10 opacity-30 left-[100px] ">
+               <p class="text-[#777777] relative z-2 text-sm mb-7">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                <h2 class="font-bold text-xl">Ilham Yuda</h2>
-               <h3 class="text-[#777777] font-semibold">Businessman</h3>
+               <h3 class="text-[#777777] font-semibold"> Businessman</h3>
                 <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
                 <img src="./images/client.png" alt="" class="">
                 </div>
             </div>
-            <div class="client-right-text space-y-2.5 relative p-10 bg-white rounded-lg w-[433px] opacity-30 left-[100px]">
-               <p class="text-[#777777] relative z-2 mb-9">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div class="client-right-text space-y-1 relative md:p-10 pt-8 pl-8 pb-4 bg-white rounded-lg w-[300px] sm:w-[433px] opacity-30 left-[100px]">
+               <p class="text-[#777777] relative z-2 text-sm mb-7">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                <h2 class="font-bold text-xl">Ilham Yuda</h2>
                <h3 class="text-[#777777] font-semibold">Businessman</h3>
                 <div class="absolute -top-6 -left-7  bg-white p-2 rounded-full ">
@@ -178,7 +178,7 @@ tea time at The <br>Tea House</h2>
         </section>
         <!-- footer section -->
       <footer class="bg-[#ffddd2]">
-        <div class="mt-7 container mx-auto p-12">
+        <div class="mt-7 container mx-auto p-12 space-y-12">
           <!-- footer top -->
            <div class="flex justify-between">
               <div class="p-7">
@@ -189,8 +189,9 @@ tea time at The <br>Tea House</h2>
                 <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white py-2 px-5 rounded-md font-semibold w-fit" >Get Started</button>
               </div>
            </div>
+
           <!-- footer links -->
-           <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2">
+           <div class="grid lg:grid-cols-4 md:grid-cols-2  md:gap-12 gap-6 lg:gap-0 text-center md:text-left">
             <div class="">
               <h3 class="font-semibold text-xl">Quick Links</h3>
               <ul class="text-[#777777] text-[14px] md:text-[16px] space-y-2 mt-2.5">
@@ -200,7 +201,7 @@ tea time at The <br>Tea House</h2>
                 <li><a href="">Insurance</a></li>
               </ul>
             </div>
-            <div>
+            <div >
               <h3 class="font-semibold text-xl">Our Service</h3>
               <ul class="text-[#777777] text-[14px] md:text-[16px] space-y-2 mt-2.5">
                 <li>Life Insurance</li>
@@ -217,9 +218,11 @@ tea time at The <br>Tea House</h2>
               </ul>
             </div>
             <div class="space-y-5">
-              <h3 class="font-semibold text-xl ">Subscribe to our <br> newsletter</h3>
+              <h3 class="font-bold text-xl ">Subscribe to our <br> newsletter</h3>
+              <div class="flex justify-center">
               <input type="text" placeholder="Email address" class="border-b-2 pb-2  outline-none text-[#777777]">
               <button class="bg-linear-to-r from-[#ff882a] to-[#ff0000] text-white rounded-full h-8 w-8 font-semibold" ><i class="fa-solid fa-angle-right"></i></button>
+              </div>
               <!-- socials -->
               <div class="space-x-4">
                 <i class="fa-brands fa-facebook-f"></i>
@@ -228,6 +231,9 @@ tea time at The <br>Tea House</h2>
               </div>
             </div>
            </div>
+
+           <!-- footer bottom -->
+              <p class="text-[#777777] text-[14px] text-center md:text-[16px] ">© 2027 UIDesign.to - All rights reserved.</p>
         </div>
       </footer>
   </body>
